--- a/assets/css/style_contact.css
+++ b/assets/css/style_contact.css
@@ -9,7 +9,6 @@
 }
 
 body {
-    background-color: black; 
     font-family: 'Rajdhani', sans-serif;
     font-size: clamp(1rem, 1vw + 0.5rem, 5rem);
     color: white;
@@ -45,7 +44,6 @@ body {
 
 .landing-video,
 .landing-overlay { 
-    /* display:none; */
     margin: 0;
     padding: 0;
     position: fixed;
@@ -61,7 +59,6 @@ body {
     background-position: center;
 }
 .landing-overlay {
-    /* display:none; */
     background-color:rgba(25, 0, 252, 0.4);
     mix-blend-mode: overlay;
 }
@@ -91,7 +88,6 @@ body {
 }
 .navbar ul {
     display: flex;
-    /* justify-content: space-between; */
     gap: 3em;
     list-style: none;
     margin: 0;
@@ -130,12 +126,10 @@ body {
     justify-content: center;
     position: relative;
     top: 10em;
-    /* width: 70%; */
 }
 .contact-form{
     padding: 0.5em;
     width: 30%;
-    /* outline: auto red; */
 }
 .contact-form-container h2{
     display:none;
@@ -146,7 +140,6 @@ body {
     font-size: clamp(1rem, 1vw + 3rem, 5rem);
 }
 .contact-form h3{
-    /* display: none; */
     text-align: center;
     color:cyan;
     font-size: clamp(1rem, 1vw + 1rem, 1.7rem);
@@ -211,7 +204,6 @@ input[type="email"]{
     bottom: 0.2em;
     display: flex;
     justify-content: space-evenly;
-    /* outline: red 5px solid; */
 }
 
 #footer-details {
@@ -248,39 +240,35 @@ input[type="email"]{
     color: black;
     
 }
+/* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
 
- /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
- /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
- /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
- /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
- /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
- /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */ /* RESPONSIVENESS: MEDIA QUERIES */
-
- /* 320px = 20em */
+/* 320px = 20em */
  @media screen and (min-width: 20em) and (max-width: 23em){
-  
+
 /* -------------- HEADER -------------- */ 
 .header-container
 {
-        display:flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;  
-        height: 8.125em;    
-        width: 100%;
+    display:flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;  
+    height: 8.125em;    
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 #branding  {
-        display:flex;
-        justify-content: center;
+    display:flex;
+    justify-content: center;
 }
 .logotype {
-        position: relative;
-        left: 0.1em;
-        top: 0.5em;
-        margin: 0;
-        padding: 0;
-        font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+    position: relative;
+    left: 0.1em;
+    top: 0.5em;
+    margin: 0;
+    padding: 0;
+    font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
 }
+
 /* -------------- NAVBAR -------------- */ 
 .navbar {
     position: relative;
@@ -293,38 +281,36 @@ input[type="email"]{
     padding: 0.2em;
 }
 .navbar ul {
-display: flex;
-justify-content: center;
-gap: 1em;
-width: 100%;
-/* outline: auto; */
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    width: 100%;
 }
 .navbar a {
     padding: 0;
-    margin: 0;
+    margin: 0 em;
     font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
 }
 
 /* -------------- LANDING VIDEO -------------- */ 
 .landing-video,
 .landing-overlay { 
-    display: none;
     margin: 0;
     padding: 0;
     position: fixed;
     top: 50%;
     left: 50%;
-    min-width: 50%;
-    min-height: 50%;
+    min-width: 300%;
+    min-height: 300%;
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translateX(-50%) translateY(-60%) rotateX(20deg) rotateY(110deg);
+    transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(10deg);
     background-size: cover;
     background-position: center;
 }
 .landing-overlay {
-    background-color: rgba(7, 7, 7, 0.9);
+    background: #524399;
     mix-blend-mode: overlay;
 }
 
@@ -332,16 +318,12 @@ width: 100%;
 .landing-image-container img {
     display: none;
 }
-
-/* -------------- LANDING TEXT -------------- */ 
-.landing-text h2{
-    /* display: none; */
-    padding: 0;
-    margin: 0.5em 0;
-    position: relative;
-    top: -3em;
-    font-size: clamp(1.8rem, 1vw + 1rem, 2rem);
+/* -------------- LANDING TEXT -------------- */
+.landing-text {
+    display: none;
 }
+
+
 
 /* -------------- CONTACT FORM -------------- */
 .contact-form-container {
@@ -451,46 +433,69 @@ input[type="email"]{
 /* -------------- HEADER -------------- */ 
 .header-container
 {
-        display:flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;  
-        height: 8.125em;    
-        width: 100%;
+    display:flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;  
+    height: 8.125em;    
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 #branding  {
-        display:flex;
-        justify-content: center;
+    display:flex;
+    justify-content: center;
 }
 .logotype {
-        position: relative;
-        left: 0.1em;
-        top: 0.5em;
-        margin: 0;
-        padding: 0;
-        font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+    position: relative;
+    left: 0.1em;
+    top: 0.5em;
+    margin: 0;
+    padding: 0;
+    font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+}
+
+/* -------------- NAVBAR -------------- */ 
+.navbar {
+    position: relative;
+    display: flex;
+    left: 0em;
+    top: 1em;
+    width: 100%;
+    height: 100%;
+    margin: 0em;
+    padding: 0.2em;
+}
+.navbar ul {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    width: 100%;
+}
+.navbar a {
+    padding: 0;
+    margin: 0 em;
+    font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
 }
 
 /* -------------- LANDING VIDEO -------------- */ 
 .landing-video,
 .landing-overlay { 
-    display: none;
     margin: 0;
     padding: 0;
     position: fixed;
     top: 50%;
     left: 50%;
-    min-width: 50%;
-    min-height: 50%;
+    min-width: 300%;
+    min-height: 300%;
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translateX(-50%) translateY(-60%) rotateX(20deg) rotateY(110deg);
+    transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(10deg);
     background-size: cover;
     background-position: center;
 }
 .landing-overlay {
-    background-color: rgba(7, 7, 7, 0.9);
+    background: #524399;
     mix-blend-mode: overlay;
 }
 
@@ -498,43 +503,11 @@ input[type="email"]{
 .landing-image-container img {
     display: none;
 }
-
-/* -------------- NAVBAR -------------- */ 
-.navbar {
-        position: relative;
-        display: flex;
-        
-        
-        left: 0em;
-        top: 1em;
-        width: 100%;
-        height: 100%;
-        margin: 0em;
-        padding: 0.2em;
-
-}
-.navbar ul {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    width: 100%;
-    /* outline: auto; */
-}
-.navbar a {
-        padding: 0;
-        margin: 0;
-        font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
+/* -------------- LANDING TEXT -------------- */
+.landing-text {
+    display: none;
 }
 
-/* -------------- LANDING TEXT -------------- */ 
-.landing-text h2{
-    /* display: none; */
-    padding: 0;
-    margin: 0.5em 0;
-    position: relative;
-    top: -3em;
-    font-size: clamp(1.8rem, 1vw + 1rem, 2rem);
-}
 
 /* -------------- CONTACT FORM -------------- */
 .contact-form-container {
@@ -640,49 +613,73 @@ input[type="email"]{
     
 /* 480px = 30em  */
 @media screen and (min-width: 30em) and (max-width: 47em) {
+
 /* -------------- HEADER -------------- */ 
 .header-container
 {
-        display:flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;  
-        height: 8.125em;    
-        width: 100%;
+    display:flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;  
+    height: 8.125em;    
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 #branding  {
-        display:flex;
-        justify-content: center;
+    display:flex;
+    justify-content: center;
 }
 .logotype {
-        position: relative;
-        left: 0.1em;
-        top: 0.5em;
-        margin: 0;
-        padding: 0;
-        font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+    position: relative;
+    left: 0.1em;
+    top: 0.5em;
+    margin: 0;
+    padding: 0;
+    font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+}
+
+/* -------------- NAVBAR -------------- */ 
+.navbar {
+    position: relative;
+    display: flex;
+    left: 0em;
+    top: 1em;
+    width: 100%;
+    height: 100%;
+    margin: 0em;
+    padding: 0.2em;
+}
+.navbar ul {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    width: 100%;
+}
+.navbar a {
+    padding: 0;
+    margin: 0 em;
+    font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
 }
 
 /* -------------- LANDING VIDEO -------------- */ 
 .landing-video,
 .landing-overlay { 
-    display: none;
     margin: 0;
     padding: 0;
     position: fixed;
     top: 50%;
     left: 50%;
-    min-width: 50%;
-    min-height: 50%;
+    min-width: 300%;
+    min-height: 300%;
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translateX(-50%) translateY(-60%) rotateX(20deg) rotateY(110deg);
+    transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(10deg);
     background-size: cover;
     background-position: center;
 }
 .landing-overlay {
-    background-color: rgba(7, 7, 7, 0.9);
+    background: #524399;
     mix-blend-mode: overlay;
 }
 
@@ -690,43 +687,11 @@ input[type="email"]{
 .landing-image-container img {
     display: none;
 }
-
-/* -------------- NAVBAR -------------- */ 
-.navbar {
-        position: relative;
-        display: flex;
-        
-        
-        left: 0em;
-        top: 1em;
-        width: 100%;
-        height: 100%;
-        margin: 0em;
-        padding: 0.2em;
-
-}
-.navbar ul {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    width: 100%;
-    /* outline: auto; */
-}
-.navbar a {
-        padding: 0;
-        margin: 0;
-        font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
+/* -------------- LANDING TEXT -------------- */
+.landing-text {
+    display: none;
 }
 
-/* -------------- LANDING TEXT -------------- */ 
-.landing-text h2{
-    /* display: none; */
-    padding: 0;
-    margin: 0.5em 0;
-    position: relative;
-    top: -3em;
-    font-size: clamp(1.8rem, 1vw + 1rem, 2rem);
-}
 
 /* -------------- CONTACT FORM -------------- */
 .contact-form-container {
@@ -836,46 +801,69 @@ input[type="email"]{
 /* -------------- HEADER -------------- */ 
 .header-container
 {
-        display:flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;  
-        height: 8.125em;    
-        width: 100%;
+    display:flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;  
+    height: 8.125em;    
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 #branding  {
-        display:flex;
-        justify-content: center;
+    display:flex;
+    justify-content: center;
 }
 .logotype {
-        position: relative;
-        left: 0.1em;
-        top: 0.5em;
-        margin: 0;
-        padding: 0;
-        font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+    position: relative;
+    left: 0.1em;
+    top: 0.5em;
+    margin: 0;
+    padding: 0;
+    font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+}
+
+/* -------------- NAVBAR -------------- */ 
+.navbar {
+    position: relative;
+    display: flex;
+    left: 0em;
+    top: 1em;
+    width: 100%;
+    height: 100%;
+    margin: 0em;
+    padding: 0.2em;
+}
+.navbar ul {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    width: 100%;
+}
+.navbar a {
+    padding: 0;
+    margin: 0 em;
+    font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
 }
 
 /* -------------- LANDING VIDEO -------------- */ 
 .landing-video,
 .landing-overlay { 
-    display: none;
     margin: 0;
     padding: 0;
     position: fixed;
     top: 50%;
     left: 50%;
-    min-width: 50%;
-    min-height: 50%;
+    min-width: 300%;
+    min-height: 300%;
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translateX(-50%) translateY(-60%) rotateX(20deg) rotateY(110deg);
+    transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(10deg);
     background-size: cover;
     background-position: center;
 }
 .landing-overlay {
-    background-color: rgba(7, 7, 7, 0.9);
+    background: #524399;
     mix-blend-mode: overlay;
 }
 
@@ -883,43 +871,11 @@ input[type="email"]{
 .landing-image-container img {
     display: none;
 }
-
-/* -------------- NAVBAR -------------- */ 
-.navbar {
-        position: relative;
-        display: flex;
-        
-        
-        left: 0em;
-        top: 1em;
-        width: 100%;
-        height: 100%;
-        margin: 0em;
-        padding: 0.2em;
-
-}
-.navbar ul {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    width: 100%;
-    /* outline: auto; */
-}
-.navbar a {
-        padding: 0;
-        margin: 0;
-        font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
+/* -------------- LANDING TEXT -------------- */
+.landing-text {
+    display: none;
 }
 
-/* -------------- LANDING TEXT -------------- */ 
-.landing-text h2{
-    /* display: none; */
-    padding: 0;
-    margin: 0.5em 0;
-    position: relative;
-    top: -3em;
-    font-size: clamp(1.8rem, 1vw + 1rem, 2rem);
-}
 
 /* -------------- CONTACT FORM -------------- */
 .contact-form-container {
@@ -1029,46 +985,69 @@ input[type="email"]{
 /* -------------- HEADER -------------- */ 
 .header-container
 {
-        display:flex;
-        flex-direction: column;
-        margin: 0;
-        padding: 0;  
-        height: 8.125em;    
-        width: 100%;
+    display:flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;  
+    height: 8.125em;    
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
 }
 #branding  {
-        display:flex;
-        justify-content: center;
+    display:flex;
+    justify-content: center;
 }
 .logotype {
-        position: relative;
-        left: 0.1em;
-        top: 0.5em;
-        margin: 0;
-        padding: 0;
-        font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+    position: relative;
+    left: 0.1em;
+    top: 0.5em;
+    margin: 0;
+    padding: 0;
+    font-size: clamp(2.5rem, 1vw + 0.5rem, 3rem);
+}
+
+/* -------------- NAVBAR -------------- */ 
+.navbar {
+    position: relative;
+    display: flex;
+    left: 0em;
+    top: 1em;
+    width: 100%;
+    height: 100%;
+    margin: 0em;
+    padding: 0.2em;
+}
+.navbar ul {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    width: 100%;
+}
+.navbar a {
+    padding: 0;
+    margin: 0 em;
+    font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
 }
 
 /* -------------- LANDING VIDEO -------------- */ 
 .landing-video,
 .landing-overlay { 
-    display: none;
     margin: 0;
     padding: 0;
     position: fixed;
     top: 50%;
     left: 50%;
-    min-width: 50%;
-    min-height: 50%;
+    min-width: 300%;
+    min-height: 300%;
     width: auto;
     height: auto;
     z-index: -100;
-    transform: translateX(-50%) translateY(-60%) rotateX(20deg) rotateY(110deg);
+    transform: translateX(-50%) translateY(-50%) rotateX(0deg) rotateY(10deg);
     background-size: cover;
     background-position: center;
 }
 .landing-overlay {
-    background-color: rgba(7, 7, 7, 0.9);
+    background: #524399;
     mix-blend-mode: overlay;
 }
 
@@ -1076,43 +1055,11 @@ input[type="email"]{
 .landing-image-container img {
     display: none;
 }
-
-/* -------------- NAVBAR -------------- */ 
-.navbar {
-        position: relative;
-        display: flex;
-        
-        
-        left: 0em;
-        top: 1em;
-        width: 100%;
-        height: 100%;
-        margin: 0em;
-        padding: 0.2em;
-
-}
-.navbar ul {
-    display: flex;
-    justify-content: center;
-    gap: 1em;
-    width: 100%;
-    /* outline: auto; */
-}
-.navbar a {
-        padding: 0;
-        margin: 0;
-        font-size: clamp(1.8rem, 1vw + 1rem, 3rem);
+/* -------------- LANDING TEXT -------------- */
+.landing-text {
+    display: none;
 }
 
-/* -------------- LANDING TEXT -------------- */ 
-.landing-text h2{
-    /* display: none; */
-    padding: 0;
-    margin: 0.5em 0;
-    position: relative;
-    top: -3em;
-    font-size: clamp(1.8rem, 1vw + 1rem, 2rem);
-}
 
 /* -------------- CONTACT FORM -------------- */
 .contact-form-container {
